@@ -2,6 +2,7 @@ breezy-debian (2.8.16) UNRELEASED; urgency=medium
 
   * Properly escape slashes in git branch names.
   * Add dgit: directory.
+  * Cope with Dgit headers without location.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 14 Sep 2018 14:41:09 +0100
 
